--- a/index.html
+++ b/index.html
@@ -16,11 +16,25 @@
     <!-- header section -->
     <header>
         <!-- navbar -->
-        <nav class="dark-grey">
-            <div class="container-fluid">
-                
-            </div>
-        </nav>
+        <section class="dark-grey">
+            <nav>
+                <div class="container-fluid">
+                    <div class="row">
+                        <div class="col-12">
+                            <h3><a href="">START BOOTSTRAP</a></h3>
+                            <ul class="hidden-1">
+                                <li><a href="">PORTFOLIO</a></li>
+                                <li><a href="">ABOUT</a></li>
+                                <li><a href="">CONTACT</a></li>
+                            </ul>
+                            <div class="hamburgher-btn hidden-2">
+                                <a href=""><i class="fa-solid fa-bars"></i></a>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </nav>
+        </section>
     </header>
     <!-- main section -->
     <main>
