--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
         crossorigin="anonymous" referrerpolicy="no-referrer" />
     <!-- bootstrap lib link -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js">
     <!-- link stylepage css -->
     <link rel="stylesheet" href="css/style.css">
     <title>Freelance Bootstrap</title>
@@ -16,21 +17,40 @@
     <!-- header section -->
     <header>
         <!-- navbar -->
-        <section class="dark-grey">
-            <nav>
+        <section id="nav" class="dark-grey">
+            <nav class="navbar navbar-expand-sm">
                 <div class="container-fluid">
-                    <div class="row">
-                        <div class="col-12">
-                            <h3><a href="">START BOOTSTRAP</a></h3>
-                            <ul class="hidden-1">
-                                <li><a href="">PORTFOLIO</a></li>
-                                <li><a href="">ABOUT</a></li>
-                                <li><a href="">CONTACT</a></li>
-                            </ul>
-                            <div class="hamburgher-btn hidden-2">
-                                <a href=""><i class="fa-solid fa-bars"></i></a>
-                            </div>
-                        </div>
+                    <a class="navbar-brand" href="#">START BOOTSTRAP</a>
+                    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
+                        aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+                        <span><i class="fa-solid fa-bars" style="color: white;"></i></span>
+                    </button>
+                    <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                        <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+                            <li class="nav-item">
+                                <a class="nav-link" href="#">PORTFOLIO</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link" href="#">ABOUT</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link" href="#">CONTACT</a>
+                            </li>
+                            <li class="nav-item">
+                                <ul class="dropdown-menu">
+                                    <li class="nav-item">
+                                        <a class="nav-link" href="#">PORTFOLIO</a>
+                                    </li>
+                                    <li class="nav-item">
+                                        <a class="nav-link" href="#">ABOUT</a>
+                                    </li>
+                                    <li class="nav-item">
+                                        <a class="nav-link" href="#">CONTACT</a>
+                                    </li>
+                                </ul>
+                                
+                            </li>
+                        </ul>
                     </div>
                 </div>
             </nav>
@@ -39,7 +59,7 @@
     <!-- main section -->
     <main>
         <!-- jumbotron section -->
-        <section class="green">
+        <section id="jumbotron" class="green">
             <div class="container-xs">
                 <div class="row">
                     <!-- img -->
@@ -206,28 +226,58 @@
                         <div class="line"></div>
                     </div>
                 </div>
-                <!-- ul list contact -->
+                <!-- ul list contact --> 
                 <div class="row">
-                    <ul class="list-group list-group-flush">
-                        <li class="list-group-item">Name</li>
-                        <li class="list-group-item">Email Adress</li>
-                        <li class="list-group-item">Phone Number</li>
-                        <li class="list-group-item">Message</li>
-                    </ul>
-                    <!-- floating form message box -->
-                    <div class="col-xs-12">
-                        <div class="form-floating">
-                            <textarea class="form-control" placeholder="Leave a message here" id="floatingTextarea2_border"
-                                style="height: 100px"></textarea>
-                        </div>
-                    </div>
-                    <!-- send btn -->
-                    <div class="col-xs-12">
-                        <div class="send-btn">
-                            <a href="">Send</a>
-                        </div>
-                    </div>
 
+                    <form class="contact" action="">
+
+                        <ul class="list-group list-group-flush">
+                            <!-- name text -->
+                            <li class="list-group-item">
+                                <div class="row mb-3">
+                                    <label for="inputName3" class="col-sm-2 col-form-label">
+                                        Name :
+                                    </label>
+                                    <div class="col-sm-10">
+                                        <input type="email" class="form-control" id="inputEmail3">
+                                    </div>
+                                </div>
+                            </li>
+                            <!-- email text -->
+                            <li class="list-group-item">
+                                <div class="row mb-3">
+                                    <label for="inputEmail3" class="col-sm-2 col-form-label">
+                                        E-mail :
+                                    </label>
+                                    <div class="col-sm-10">
+                                        <input type="email" class="form-control" id="inputEmail3">
+                                    </div>
+                                </div>
+                            </li>
+                         <!-- phone text -->
+                            <li class="list-group-item">
+                                <div class="row mb-3">
+                                    <label for="inputPhone3" class="col-sm-2 col-form-label">
+                                        Phone :
+                                    </label>
+                                    <div class="col-sm-10">
+                                        <input type="email" class="form-control" id="inputEmail3">
+                                    </div>
+                                </div>
+                            </li>
+                            <!-- message name span -->
+                            <li class="list-group-item">Message :</li>
+                        </ul>
+                        <!-- floating form message box -->
+                        <div class="col-xs-12">
+                            <div class="form-floating">
+                                <textarea class="form-control" placeholder="Leave a message here" id="floatingTextarea2_border"
+                                    style="height: 100px"></textarea>
+                            </div>
+                        </div>
+                        <!-- send btn -->
+                        <button  class="btn bg-color text-bg-success p-2" type="submit">Send</button>
+                    </form>
                 </div>
             </div>
         </section>
@@ -277,5 +327,11 @@
             </div>
         </section>
     </footer>
+
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.min.js"
+        integrity="sha384-BBtl+eGJRgqQAUMxJ7pMwbEyER4l1g+O15P+16Ep7Q9Q+zqX6gSbd85u4mG4QzX+"
+        crossorigin="anonymous"></script>
+
+
 </body>
 </html>
