--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         <!-- navbar -->
         <section id="nav" class="dark-grey">
             <nav class="navbar navbar-expand-sm">
-                <div class="container-fluid">
+                <div class="container-sm container-md container-xxl">
                     <a class="navbar-brand" href="#">START BOOTSTRAP</a>
                     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
                         aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -122,37 +122,37 @@
                 <!-- row -->
                 <div class="row">
                     <!-- col 1 -->
-                    <div class="col-xs-12 col-md-6 col-lg-4">
+                    <div class="col-xs-12 col-md-6 col-xl-4">
                         <div class="img-box">
                             <a href=""><img src="img/cabin.png" alt=""></a>
                         </div>
                     </div>
                     <!-- col 2 -->
-                    <div class="col-xs-12 col-md-6 col-lg-4">
+                    <div class="col-sm-12 col-md-6 col-xl-4">
                         <div class="img-box">
                             <a href=""><img src="img/cake.png" alt=""></a>
                         </div>
                     </div>
                     <!-- col 3 -->
-                    <div class="col-xs-12 col-md-6 col-lg-4">
+                    <div class="col-sm-12 col-md-6 col-xl-4">
                         <div class="img-box">
                             <a href=""><img src="img/circus.png" alt=""></a>
                         </div>
                     </div>
                     <!-- col 4 -->
-                    <div class="col-xs-12 col-md-6 col-lg-4">
+                    <div class="col-sm-12 col-md-6 col-xl-4">
                         <div class="img-box">
                             <a href=""><img src="img/game.png" alt=""></a>
                         </div>
                     </div>
                     <!-- col 5 -->
-                    <div class="col-xs-12 col-md-6 col-lg-4">
+                    <div class="col-sm-12 col-md-6 col-xl-4">
                         <div class="img-box">
                             <a href=""><img src="img/safe.png" alt=""></a>
                         </div>
                     </div>
                     <!-- col 6 -->
-                    <div class="col-xs-12 col-md-6 col-lg-4">
+                    <div class="col-sm-12 col-md-6 col-xl-4">
                         <div class="img-box">
                             <a href=""><img src="img/submarine.png" alt=""></a>
                         </div>
