--- a/index.html
+++ b/index.html
@@ -191,7 +191,7 @@
                             Freelancer is a free bootstrap theme created by Start Bootstrap. The download includes the complete source files including HTML, CSS and JavaScript as well as optional LESS stylesheet for easy customization.
                         </p>
                     </div>
-                    <div class="col-xs-12 col-md-4 col-md-offset-4">
+                    <div class="col-xs-12 col-md-4">
                         <p class="white">
                             Whatever you're a student looking to showcase yout work, a professiona looking to attract clients, oa a graphic artist looking to share your, projects, this template is the perfect starting point!
                         </p>
