--- a/index.html
+++ b/index.html
@@ -16,34 +16,51 @@
 <body>
     <!-- header section -->
     <header>
-        <!-- navbar -->
+        <!-- Navbar section -->
         <section id="nav" class="dark-grey">
+            <!-- navbar -->
             <nav class="navbar navbar-expand-sm">
+                <!-- container -->
                 <div class="container-sm container-md container-xxl">
+                    <!-- navbar title -->
                     <a class="navbar-brand" href="#">START BOOTSTRAP</a>
+                    <!-- navbar hamburher menu -->
                     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
                         aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-                        <span><i class="fa-solid fa-bars" style="color: white;"></i></span>
+                        <!-- navbar btn nestes icon -->
+                        <span>
+                            <i class="fa-solid fa-bars" style="color: white;"></i>
+                        </span>
                     </button>
+                    <!-- Navbar collapse menu -->
                     <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                        <!-- Unordered list -->
                         <ul class="navbar-nav me-auto mb-lg-0">
+
                             <li class="nav-item">
                                 <a class="nav-link" href="#">PORTFOLIO</a>
                             </li>
+
                             <li class="nav-item">
                                 <a class="nav-link" href="#">ABOUT</a>
                             </li>
+
                             <li class="nav-item">
                                 <a class="nav-link" href="#">CONTACT</a>
                             </li>
+                            <!-- dropdown menu -->
                             <li class="nav-item">
+
                                 <ul class="dropdown-menu">
+
                                     <li class="nav-item">
                                         <a class="nav-link" href="#">PORTFOLIO</a>
                                     </li>
+
                                     <li class="nav-item">
                                         <a class="nav-link" href="#">ABOUT</a>
                                     </li>
+
                                     <li class="nav-item">
                                         <a class="nav-link" href="#">CONTACT</a>
                                     </li>
@@ -60,7 +77,9 @@
     <main>
         <!-- jumbotron section -->
         <section id="jumbotron" class="green">
+            <!-- jumbotron container -->
             <div class="container-xs">
+
                 <div class="row">
                     <!-- img -->
                    <div class="col-12-xs d-flex justify-content-center jumbo-img">
@@ -85,11 +104,31 @@
                    <!-- ul li -->
                    <div class="col-12-xs jumbo-txt d-flex justify-content-center">
                     <ul>
-                        <li><h3><a href="">GRAPHIC ARTIST</a></h3></li>
-                        <li><span>-</span></li>
-                        <li><h3><a href="">WEB DESIGNER</a></h3></li>
-                        <li><span>-</span></li>
-                        <li><h3><a href="">ILLUSTRATOR</a></h3></li>
+                        <li>
+                            <h3>
+                                <a href="">GRAPHIC ARTIST</a>
+                            </h3>
+                        </li>
+                        <li>
+                            <span>
+                                -
+                            </span>
+                        </li>
+                        <li>
+                            <h3>
+                                <a href="">WEB DESIGNER</a>
+                            </h3>
+                        </li>
+                        <li>
+                            <span>
+                                -
+                            </span>
+                        </li>
+                        <li>
+                            <h3>
+                                <a href="">ILLUSTRATOR</a>
+                            </h3>
+                        </li>
                     </ul>
                    </div>
                 </div>
@@ -124,37 +163,49 @@
                     <!-- col 1 -->
                     <div class="col-xs-12 col-md-6 col-xl-4">
                         <div class="img-box">
-                            <a href=""><img src="img/cabin.png" alt=""></a>
+                            <a href="">
+                                <img src="img/cabin.png" alt="">
+                            </a>
                         </div>
                     </div>
                     <!-- col 2 -->
                     <div class="col-sm-12 col-md-6 col-xl-4">
                         <div class="img-box">
-                            <a href=""><img src="img/cake.png" alt=""></a>
+                            <a href="">
+                                <img src="img/cake.png" alt="">
+                            </a>
                         </div>
                     </div>
                     <!-- col 3 -->
                     <div class="col-sm-12 col-md-6 col-xl-4">
                         <div class="img-box">
-                            <a href=""><img src="img/circus.png" alt=""></a>
+                            <a href="">
+                                <img src="img/circus.png" alt="">
+                            </a>
                         </div>
                     </div>
                     <!-- col 4 -->
                     <div class="col-sm-12 col-md-6 col-xl-4">
                         <div class="img-box">
-                            <a href=""><img src="img/game.png" alt=""></a>
+                            <a href="">
+                                <img src="img/game.png" alt="">
+                            </a>
                         </div>
                     </div>
                     <!-- col 5 -->
                     <div class="col-sm-12 col-md-6 col-xl-4">
                         <div class="img-box">
-                            <a href=""><img src="img/safe.png" alt=""></a>
+                            <a href="">
+                                <img src="img/safe.png" alt="">
+                            </a>
                         </div>
                     </div>
                     <!-- col 6 -->
                     <div class="col-sm-12 col-md-6 col-xl-4">
                         <div class="img-box">
-                            <a href=""><img src="img/submarine.png" alt=""></a>
+                            <a href="">
+                                <img src="img/submarine.png" alt="">
+                            </a>
                         </div>
                     </div>
                 </div>
@@ -184,22 +235,35 @@
                     </div>
                 </div>
             </div>
+            <!-- columns with text -->
             <div class="container-xs">
+
                 <div class="row justify-content-md-center justify-content-xs-center">
+
                     <div class="col-xs-12 col-md-4">
+
                         <p class="white">
+
                             Freelancer is a free bootstrap theme created by Start Bootstrap. The download includes the complete source files including HTML, CSS and JavaScript as well as optional LESS stylesheet for easy customization.
                         </p>
                     </div>
+
                     <div class="col-xs-12 col-md-4">
+
                         <p class="white">
+
                             Whatever you're a student looking to showcase yout work, a professiona looking to attract clients, oa a graphic artist looking to share your, projects, this template is the perfect starting point!
                         </p>
                     </div>
                 <div class="row">
                     <dic class="col-xs-1 d-flex justify-content-center">
+                        <!-- download btn -->
                         <div class="btn">
-                            <a href=""><i class="fa-solid fa-download"></i>Download</a>
+
+                            <a href="">
+                                <i class="fa-solid fa-download"></i>
+                                Download
+                            </a>
                         </div>
                     </dic>
                 </div>
@@ -228,56 +292,58 @@
                 </div>
                 <!-- ul list contact --> 
                 <div class="row">
-
-                    <form class="contact" action="">
-
-                        <ul class="list-group list-group-flush">
-                            <!-- name text -->
-                            <li class="list-group-item">
-                                <div class="row mb-3">
-                                    <label for="inputName3" class="col-sm-2 col-form-label">
-                                        Name :
-                                    </label>
-                                    <div class="col-sm-10">
-                                        <input type="email" class="form-control" id="inputEmail3">
+                    <div class="col-12-xs justify-content-xs-center">
+                        <!-- form area -->
+                        <form class="contact" action="">
+                            <!-- unordered list with nested input -->
+                            <ul class="list-group list-group-flush">
+                                <!-- name input text -->
+                                <li class="list-group-item">
+                                    <div class="row mb-3">
+                                        <label for="inputName3" class="col-sm-2 col-form-label">
+                                            Name :
+                                        </label>
+                                        <div class="col-sm-10">
+                                            <input type="email" class="form-control" id="inputEmail3">
+                                        </div>
                                     </div>
-                                </div>
-                            </li>
-                            <!-- email text -->
-                            <li class="list-group-item">
-                                <div class="row mb-3">
-                                    <label for="inputEmail3" class="col-sm-2 col-form-label">
-                                        E-mail :
-                                    </label>
-                                    <div class="col-sm-10">
-                                        <input type="email" class="form-control" id="inputEmail3">
+                                </li>
+                                <!-- email input text -->
+                                <li class="list-group-item">
+                                    <div class="row mb-3">
+                                        <label for="inputEmail3" class="col-sm-2 col-form-label">
+                                            E-mail :
+                                        </label>
+                                        <div class="col-sm-10">
+                                            <input type="email" class="form-control" id="inputEmail3">
+                                        </div>
                                     </div>
-                                </div>
-                            </li>
-                         <!-- phone text -->
-                            <li class="list-group-item">
-                                <div class="row mb-3">
-                                    <label for="inputPhone3" class="col-sm-2 col-form-label">
-                                        Phone :
-                                    </label>
-                                    <div class="col-sm-10">
-                                        <input type="email" class="form-control" id="inputEmail3">
+                                </li>
+                                <!-- phone input text -->
+                                <li class="list-group-item">
+                                    <div class="row mb-3">
+                                        <label for="inputPhone3" class="col-sm-2 col-form-label">
+                                            Phone :
+                                        </label>
+                                        <div class="col-sm-10">
+                                            <input type="email" class="form-control" id="inputEmail3">
+                                        </div>
                                     </div>
+                                </li>
+                                <!-- message name span -->
+                                <li class="list-group-item">Message :</li>
+                            </ul>
+                            <!-- floating form message box -->
+                            <div class="col-xs-12">
+                                <div class="form-floating">
+                                    <textarea class="form-control" placeholder="Leave a message here" id="floatingTextarea2_border"
+                                        style="height: 100px"></textarea>
                                 </div>
-                            </li>
-                            <!-- message name span -->
-                            <li class="list-group-item">Message :</li>
-                        </ul>
-                        <!-- floating form message box -->
-                        <div class="col-xs-12">
-                            <div class="form-floating">
-                                <textarea class="form-control" placeholder="Leave a message here" id="floatingTextarea2_border"
-                                    style="height: 100px"></textarea>
                             </div>
-                        </div>
-                        <!-- send btn -->
-                        <button  class="btn bg-color text-bg-success p-2" type="submit">Send</button>
-                    </form>
+                            <!-- send btn -->
+                            <button class="btn bg-color text-bg-success p-2" type="submit">Send</button>
+                        </form>
+                    </div>
                 </div>
             </div>
         </section>
@@ -292,21 +358,45 @@
                         <h6>LOCATION</h6>
                         <a href="">2215 John Daniel Drive Clark, MO 54243</a>
                     </div>
+                
                     <div class="col-xs-12  text-center col-md-4">
+
                         <h6>
                             AROUND THE WEB
                         </h6>
+
                         <ul class="footer-ul">
-                            <li><a href=""><i class="fa-brands fa-facebook-f"></i></a></li>
-                            <li><a href=""><i class="fa-brands fa-google-plus-g"></i></a></li>
-                            <li><a href=""><i class="fa-brands fa-twitter"></i></a></li>
-                            <li><a href=""><i class="fa-brands fa-linkedin"></i></a></li>
+
+                            <li>
+                                <a href="">
+                                    <i class="fa-brands fa-facebook-f"></i>
+                                </a>
+                            </li>
+
+                            <li>
+                                <a href="">
+                                    <i class="fa-brands fa-google-plus-g"></i>
+                                </a>
+                            </li>
+                            <li>
+                                <a href="">
+                                    <i class="fa-brands fa-twitter"></i>
+                                </a>
+                            </li>
+                            <li>
+                                <a href="">
+                                    <i class="fa-brands fa-linkedin"></i>
+                                </a>
+                            </li>
                         </ul>
                     </div>
+
                     <div class="col-xs-12 text-center col-md-4">
+
                         <h6>
                             ABOUT FREELANCER
                         </h6>
+
                         <p>
                             Freelance is a free to use, open source Bootstrap theme created by <a class="color-green" href="">Start Bootstrap</a>.
                         </p>
@@ -314,10 +404,15 @@
                 </div>
             </div>
         </section>
+
         <!-- bottom footer section -->
+
         <section class="dark-grey">
+
             <div class="container-xs">
+
                 <div class="row justify-content-md-center justify-content-xs-center">
+
                     <div class="col-xs-12 text-center">
                         <span>
                             Copyright &copy; Your Website 2023
@@ -327,7 +422,7 @@
             </div>
         </section>
     </footer>
-
+    <!-- Bootstrap JavaScript link -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.min.js"
         integrity="sha384-BBtl+eGJRgqQAUMxJ7pMwbEyER4l1g+O15P+16Ep7Q9Q+zqX6gSbd85u4mG4QzX+"
         crossorigin="anonymous"></script>
