--- a/index.html
+++ b/index.html
@@ -237,21 +237,17 @@
             </div>
             <!-- columns with text -->
             <div class="container-xs">
-
-                <div class="row justify-content-md-center justify-content-xs-center">
-
-                    <div class="col-xs-12 col-md-4">
-
+                <div class="row justify-content-center">
+                    <div class="col-8 col-md-6 text-center">
+                        <!-- text block -->
                         <p class="white">
-
                             Freelancer is a free bootstrap theme created by Start Bootstrap. The download includes the complete source files including HTML, CSS and JavaScript as well as optional LESS stylesheet for easy customization.
                         </p>
                     </div>
 
-                    <div class="col-xs-12 col-md-4">
-
+                    <div class="col-8 col-md-6 text-center">
+                        <!-- text block -->
                         <p class="white">
-
                             Whatever you're a student looking to showcase yout work, a professiona looking to attract clients, oa a graphic artist looking to share your, projects, this template is the perfect starting point!
                         </p>
                     </div>
@@ -259,7 +255,6 @@
                     <dic class="col-xs-1 d-flex justify-content-center">
                         <!-- download btn -->
                         <div class="btn">
-
                             <a href="">
                                 <i class="fa-solid fa-download"></i>
                                 Download
@@ -274,13 +269,13 @@
         <section class="white">
             <div class="container-xs">
                 <div class="row">
-                    <div class="col-12 d-flex justify-content-center">
+                    <div class="col-12-xs d-flex justify-content-center">
                         <h3 class="black">
                             CONTACT ME
                         </h3>
                     </div>
                     <!-- draw -->
-                    <div class="col-xs-12 draw black d-flex justify-content-center">
+                    <div class="col-8 col-xl-10 text-center">
                         <div class="line"></div>
                         <div class="star">
                             <a href="">
@@ -294,7 +289,7 @@
                 <div class="row">
                     <div class="col-12-xs justify-content-xs-center">
                         <!-- form area -->
-                        <form class="contact" action="">
+                        <form class="contact" action="#">
                             <!-- unordered list with nested input -->
                             <ul class="list-group list-group-flush">
                                 <!-- name input text -->
@@ -304,7 +299,7 @@
                                             Name :
                                         </label>
                                         <div class="col-sm-10">
-                                            <input type="email" class="form-control" id="inputEmail3">
+                                            <input type="text" class="form-control" id="inputEmail3" required>
                                         </div>
                                     </div>
                                 </li>
@@ -315,7 +310,7 @@
                                             E-mail :
                                         </label>
                                         <div class="col-sm-10">
-                                            <input type="email" class="form-control" id="inputEmail3">
+                                            <input type="email" class="form-control" id="inputEmail3" required>
                                         </div>
                                     </div>
                                 </li>
@@ -326,7 +321,7 @@
                                             Phone :
                                         </label>
                                         <div class="col-sm-10">
-                                            <input type="email" class="form-control" id="inputEmail3">
+                                            <input type="email" class="form-control" id="inputEmail3" required>
                                         </div>
                                     </div>
                                 </li>
@@ -341,7 +336,7 @@
                                 </div>
                             </div>
                             <!-- send btn -->
-                            <button class="btn bg-color text-bg-success p-2" type="submit">Send</button>
+                            <button class="btn bg-color text-bg-success p-2" type="submit" value="Send">Send</button>
                         </form>
                     </div>
                 </div>
