--- a/index.html
+++ b/index.html
@@ -349,12 +349,12 @@
         <section class="light-grey">
             <div class="container-xs">
                 <div class="row justify-content-md-center justify-content-xs-center">
-                    <div class="col-xs-12 text-center a-white col-md-4">
+                    <div class="col-xs-12 text-center a-white col-md-4 mb-5">
                         <h6>LOCATION</h6>
                         <a href="">2215 John Daniel Drive Clark, MO 54243</a>
                     </div>
                 
-                    <div class="col-xs-12  text-center col-md-4">
+                    <div class="col-xs-12 text-center col-md-4 mb-3">
 
                         <h6>
                             AROUND THE WEB
@@ -386,7 +386,7 @@
                         </ul>
                     </div>
 
-                    <div class="col-xs-12 text-center col-md-4">
+                    <div class="col-xs-12 text-center col-md-4 mb-3">
 
                         <h6>
                             ABOUT FREELANCER
